<resources>
    <string name="app_name">El BADULAKE</string>
    <string name="Iniciar_Sesión">Iniciar Sesión</string>
    <string name="Registrate">Registrate</string>
    <string name="Comprar">Comprar</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Registrarme">Registrarme</string>
    <string name="unete">UNETE A NOSOTROS!!!</string>
    <string name="backgroundColor">Color del fondo:</string>
    <string name="ColorBotones">Color de los botones:</string>
    <string-array name="Colores">
        <item>Negro</item>
        <item>Blanco</item>
        <item>Amarillo</item>
        <item>Azul Celeste</item>
        <item>Verde</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="Actualizar">Actualizar</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>




